# MASC-256

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
include/: acc_crypto.h
src/: acc_crypto.c  main.c  masc256_internal.h  memory_mix.c
test/: run.sh
tests/: test_masc256.c
